[package]
name = "libsm"
version = "0.3.0"
authors = [
    "Tang Zongxun <tangzongxun@hotmail.com>",
    "Niu Junxiang <494521900@qq.com>",
    "Cryptape Technology <contact@cryptape.com>"
]

description = "A Rust Library of China's Standards of Encryption Algorithms (SM2/3/4)"
keywords = ["cipher", "cryptography"]
license = "Apache-2.0"

[dependencies]
rand = { version = "0.7.3", default-features = false, features = ["getrandom"] }
byteorder = { version = "1.3.4", default-features = false }
num-bigint = { version = "0.2.6", default-features = false }
num-traits = { version = "0.2.12", default-features = false }
num-integer = { version = "0.1.43", default-features = false }
yasna = {version = "0.3.2", features = ["num-bigint"] }
lazy_static = "1.4.0"
